--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,13 +1,7 @@
 plugins {
-    id "com.jfrog.bintray" version "1.6"
-    id "maven-publish"
-    id "application"
     id "com.marklogic.ml-gradle" version "2.2.0"
+    id "com.jfrog.bintray" version "1.6"
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 
 if (System.getProperty("user.dir").endsWith("jobs")) {
     project.ext.smartModulePaths = ["../core/src/test/ml-modules"]
@@ -34,7 +28,7 @@ dependencies {
     // Used by MarkLogicBatchConfiguration, which depends on Jaxb2Marshaller
     compile "org.springframework:spring-oxm:4.2.6.RELEASE"
 
-    compile("com.marklogic:ml-javaclient-util:2.5") {
+    compile("com.marklogic:ml-javaclient-util:2.9.1") {
   	  exclude group: 'com.marklogic.java-client', module: 'client-api-java'
     }
 
@@ -73,8 +67,6 @@ dependencies {
   
 }
 
-sourceSets.test.resources.srcDir 'src/test/java'
-
 task deployMarkLogicJobRepository(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'com.marklogic.spring.batch.Main'
@@ -87,49 +79,24 @@ task undeployMarkLogicJobRepository(type: JavaExec) {
     args = ["--undeploy_job_repo", "--jr_name", mlJobRepositoryName, "--jr_host", mlHost, "--jr_port", mlRestPort, "--jr_username", mlManageUsername, "--jr_password", mlManagePassword]
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    baseName = "marklogic-spring-batch"
-    version = coreVersion
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-jar {
-    baseName = "marklogic-spring-batch"
-    version = coreVersion
-}
-
 // Setup the Job Repo in our test application so it's available for use by tests.
 mlPostDeploy.dependsOn deployMarkLogicJobRepository
 mlUndeploy.dependsOn undeployMarkLogicJobRepository
 
-mainClassName = "com.marklogic.spring.batch.Main"
-
-publishing {
-    publications {
-        core(MavenPublication) {
-            groupId group
-            artifactId coreArtifact
-            version coreVersion
-            from components.java
-            artifact sourcesJar
-        }
-    }
-}
-
 bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = ['core']
+    publications = [bintrayPublicationName]
     pkg {
-        repo = 'maven'
-        name = coreArtifact
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/sastafford/marklogic-spring-batch.git'
+        repo = bintrayRepo
+        name = project.name
+        userOrg = bintrayUserOrg
+        licenses = [bintrayLicense]
+        vcsUrl = bintrayVcsUrl
         version {
-            name = coreVersion
+            name = project.version
             released = new Date()
-            vcsTag = coreVersion
+            vcsTag = project.version
         }
     }
 }
