--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 group=com.marklogic
-version=0.4.3
+version=DEV
 
 bintrayRepo=maven
 bintrayUserOrg=rjrudin
 bintrayVcsUrl=https://github.com/sastafford/marklogic-spring-batch.git
-bintrayPublicationName=MyPublication
+bintrayPublicationName=mainJavaWithSources
 bintrayLicense=Apache-2.0
