#107 Defaulting bintray back to sastafford

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ group=com.marklogic
 version=DEV
 
 bintrayRepo=maven
-bintrayUserOrg=rjrudin
+bintrayUserOrg=sastafford
 bintrayVcsUrl=https://github.com/sastafford/marklogic-spring-batch.git
 bintrayPublicationName=mainJavaWithSources
 bintrayLicense=Apache-2.0
