--- a/configurations/msb-file-importers/build.gradle
+++ b/configurations/msb-file-importers/build.gradle
@@ -3,8 +3,29 @@ plugins {
 }
 
 dependencies {
-    // For loading images
+    // For importing images
     compile "org.apache.tika:tika-parsers:1.13"
+
+    // For importing RDF
+    compile('org.apache.jena:jena-arq:2.13.0') {
+        exclude(group: 'org.slf4j')
+        exclude(group: 'ch.qos.logback')
+        exclude(group: 'log4j')
+    }
+    compile('org.apache.jena:jena-core:2.13.0') {
+        exclude(group: 'org.slf4j')
+        exclude(group: 'xerces')
+        exclude(group: 'commons-cli')
+    }
+    compile('com.hp.hpl.jena:jena:2.6.4') {
+        exclude(group: 'org.slf4j')
+    }
+    compile('com.marklogic:marklogic-jena:1.0.0'){
+        changing=true
+        exclude(group: 'org.slf4j')
+        exclude(group: 'log4j')
+        exclude(group: 'ch.qos.logback')
+    }
 }
 
 bintray {
