#115 First cut at making geonames an official jobs project

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ include "core"
 include "test"
 include "jobs"
 include "jobs:file-importers"
+include "jobs:geonames"
 include "jobs:shapefiles"
 include "jobs:sql"
