Create importDocuments job project

--- a/build.gradle
+++ b/build.gradle
@@ -72,9 +72,7 @@ configure(subprojects.findAll {it.name != 'jobs'}) {
 project(':jobs') {
     dependencies {
         runtime project(':core')
-        runtime project(':jobs:file-importers')
-        runtime project(':jobs:shapefiles')
-        runtime project(':jobs:sql')
+        runtime project(':jobs:importDocuments')
     }
 }
 
