--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include "core"
 include "test"
 include "jobs"
 include "jobs:file-importers"
+include "jobs:importDocuments"
 include "jobs:geonames"
 include "jobs:shapefiles"
 include "jobs:sql"
