--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include "test"
 include "jobs"
 include "jobs:file-importers"
 include "jobs:importDocuments"
+include "jobs:importTriples"
 include "jobs:geonames"
 include "jobs:shapefiles"
 include "jobs:sql"
