Rename to importGeonames

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,6 @@ include "jobs"
 include "jobs:file-importers"
 include "jobs:importDocuments"
 include "jobs:importTriples"
-include "jobs:geonames"
+include "jobs:importGeonames"
 include "jobs:shapefiles"
 include "jobs:sql"
