--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include "jobs:file-importers"
 include "jobs:importDocuments"
 include "jobs:importTriples"
 include "jobs:importGeonames"
+include "jobs:importBinaries"
 include "jobs:shapefiles"
 include "jobs:sql"
