Include geonames and importDocuments for jobs batch file

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ project(':jobs') {
     dependencies {
         runtime project(':core')
         runtime project(':jobs:importDocuments')
+        runtime project(':jobs:importGeonames')
     }
 }
 
