Add test case to transform to JSON and load into MarkLogic, issue #71

--- a/jobs/sql/build.gradle
+++ b/jobs/sql/build.gradle
@@ -7,6 +7,8 @@ ext {
 }
 
 dependencies {
+    compile "org.json:json:20160212"
+
     // For testing SQL readers with an embedded database
     testCompile "org.hsqldb:hsqldb:2.3.3"
 
