--- a/examples/rdbms/build.gradle
+++ b/examples/rdbms/build.gradle
@@ -8,12 +8,12 @@ plugins {
 }
 
 repositories {
-    mavenLocal()
     jcenter()
+    mavenLocal()
 }
 
 dependencies {
-    runtime "com.marklogic:marklogic-spring-batch-core:0.5.2"
+    compile "com.marklogic:marklogic-spring-batch-core:0.5.2"
     compile "com.marklogic:ml-javaclient-util:2.9.1"
 
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
