--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,17 @@ configure(subprojects.findAll {it.name != 'jobs'}) {
  */
 project(':core') {
     dependencies {
-        compile "org.springframework.batch:spring-batch-core:3.0.7.RELEASE"
+        runtime "org.springframework.batch:spring-batch-core:3.0.7.RELEASE"
+
+        runtime fileTree(include: ['*.jar'], dir: 'lib')
+
+        //com.marklogic.spring.batch.Main extends com.marklogic.client.helper.LoggingObject
+        runtime "com.marklogic:ml-javaclient-util:2.9.1"
+
+        //Main depends on joptsimple.OptionParser;
+        runtime "net.sf.jopt-simple:jopt-simple:5.0.1"
+
+        runtime "org.springframework:spring-jdbc:4.2.6.RELEASE"
     }
 }
 
@@ -84,7 +94,6 @@ project(':test') {
 configure(subprojects.findAll {it.name != 'core' && it.name != "test"}) {
 
     apply plugin: "application"
-
     mainClassName = "com.marklogic.spring.batch.Main"
 
     dependencies {
