--- a/examples/rdbms_2/build.gradle
+++ b/examples/rdbms_2/build.gradle
@@ -34,21 +34,12 @@ distributions {
 
 mainClassName = "com.marklogic.spring.batch.Main"
 
-task runServer(type: JavaExec) {
-    classpath = configurations.runtime
-    main = "org.hsqldb.server.Server"
-    args = [
-            "--database.0", "file:data/sampledata",
-            "--dbname.0", "sampledata"
-    ]
-}
-
 task runManager(type: JavaExec) {
     classpath = configurations.runtime
     main = "org.hsqldb.util.DatabaseManagerSwing"
     args = [
             "--driver", "org.hsqldb.jdbc.JDBCDriver",
-            "--url", "jdbc:hsqldb:file:data/sampledata",
+            "--url", "jdbc:hsqldb:file:data/invoices",
             "--user", "SA"
     ]
 }
