--- a/examples/rdbms_2/build.gradle
+++ b/examples/rdbms_2/build.gradle
@@ -19,7 +19,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     compile "org.springframework:spring-jdbc:4.3.1.RELEASE"
 
-
     testCompile "org.hsqldb:hsqldb:2.3.4"
     testCompile "com.marklogic:marklogic-spring-batch-test:0.5.1"
 
@@ -28,7 +27,7 @@ dependencies {
 
 distributions {
     main {
-        baseName = 'baseJob'
+        baseName = artifactId
     }
 }
 
@@ -41,5 +40,20 @@ task runManager(type: JavaExec) {
             "--driver", "org.hsqldb.jdbc.JDBCDriver",
             "--url", "jdbc:hsqldb:file:data/invoices",
             "--user", "SA"
+    ]
+}
+
+task importInvoices(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "com.marklogic.spring.batch.Main"
+    args = [
+            "--host", mlHost,
+            "--port", mlPort,
+            "--username", mlUsername,
+            "--password", mlPassword,
+            "--config", "example.ExtractInvoiceDataToMarkLogicConfig",
+            "--jdbc_driver", "org.hsqldb.jdbc.JDBCDriver",
+            "--jdbc_url", "jdbc:hsqldb:file:E:\\gitrepo\\marklogic-spring-batch\\examples\\rdbms_2\\data\\invoices",
+            "--jdbc_username", "sa",
     ]
 }
