--- a/examples/base/gradle.properties
+++ b/examples/base/gradle.properties
@@ -1,1 +1,8 @@
 artifactId=base-job
+
+mlHost=oscar
+mlAppName=marklogic-spring-batch-test
+mlJobRepositoryName=marklogic-spring-batch-test
+mlRestPort=8200
+mlUsername=admin
+mlPassword=admin
