--- a/examples/dmsdk/gradle.properties
+++ b/examples/dmsdk/gradle.properties
@@ -1,6 +1,6 @@
 artifactId=base-job
 
-mlHost=oscar
+mlHost=localhost
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
