--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -2,7 +2,7 @@ artifactId=marklogic-spring-batch-core
 
 # Configuration for the test app
 # Both core and jobs tests are run against this application
-mlHost=oscar
+mlHost=localhost
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
