Moving batch jobs from jobs/ to examples/

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 include "core"
 include "test"
-include "jobs:file-importers"
-include "jobs:importDocuments"
-include "jobs:importTriples"
-include "jobs:importGeonames"
-include "jobs:importBinaries"
-include "jobs:shapefiles"
-include "jobs:sql"
+include "examples:file-importers"
+include "examples:importDocuments"
+include "examples:importTriples"
+include "examples:importGeonames"
+include "examples:importBinaries"
+include "examples:shapefiles"
+include "examples:sql"
