--- a/examples/entityEnrichment/gradle.properties
+++ b/examples/entityEnrichment/gradle.properties
@@ -1,6 +1,6 @@
 artifactId=entityEnrichment
 
-mlHost=oscar
+mlHost=localhost
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
