--- a/examples/entityEnrichment/build.gradle
+++ b/examples/entityEnrichment/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "com.marklogic.ml-gradle" version "2.3.3"
+    id "com.marklogic.ml-gradle" version "2.3.4"
     id "java"
     id "application"
 }
@@ -10,17 +10,17 @@ repositories {
 }
 
 dependencies {
-    compile "com.marklogic:marklogic-spring-batch-core:0.6.0"
+    compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
     compile "com.marklogic:ml-javaclient-util:2.9.1"
     compile "org.apache.opennlp:opennlp-tools:1.6.0"
 
-    testCompile "com.marklogic:marklogic-spring-batch-test:0.6.0"
+    testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
 
 }
 
 distributions {
     main {
-        baseName = 'baseJob'
+        baseName = 'entityEnrichment'
     }
 }
 
