--- a/examples/importBinaries/build.gradle
+++ b/examples/importBinaries/build.gradle
@@ -1,32 +1,30 @@
 plugins {
-    id "com.jfrog.bintray" version "1.6"
+    id "com.marklogic.ml-gradle" version "2.3.4"
+    id "java"
+    id "application"
 }
 
-ext {
-    artifactId = "importBinaries"
+repositories {
+    jcenter()
+    maven {
+        url "http://developer.marklogic.com/maven2"
+    }
+    mavenLocal()
 }
 
 dependencies {
 
     // For importing images
     compile "org.apache.tika:tika-parsers:1.13"
-
+    compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
+    testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = [bintrayPublicationName]
-    pkg {
-        repo = bintrayRepo
-        name = artifactId
-        userOrg = bintrayUserOrg
-        licenses = [bintrayLicense]
-        vcsUrl = bintrayVcsUrl
-        version {
-            name = project.version
-            released = new Date()
-            vcsTag = project.version
-        }
+distributions {
+    main {
+        baseName = 'importBinaries'
     }
 }
+
+mainClassName = "com.marklogic.spring.batch.Main"
+
