--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ bintrayUserOrg=sastafford
 bintrayVcsUrl=https://github.com/sastafford/marklogic-spring-batch.git
 bintrayPublicationName=mainJavaWithSources
 bintrayLicense=Apache-2.0
+
+examplesDir=e:\\gitrepo\\marklogic-spring-batch\\examples
