--- a/test/build.gradle
+++ b/test/build.gradle
@@ -8,6 +8,7 @@ ext {
 
 dependencies {
     compile "org.springframework.batch:spring-batch-core:3.0.7.RELEASE"
+    compile "com.marklogic:ml-javaclient-util:2.10.0-alpha"
     compile "com.marklogic:ml-junit:2.6.0"
 }
 
