Fix failing unit tests by setting job home directory

--- a/examples/shapefiles/build.gradle
+++ b/examples/shapefiles/build.gradle
@@ -2,6 +2,10 @@ ext {
     artifactId = "marklogic-spring-batch-shapefiles"
 }
 
+test {
+    systemProperty "job.home", examplesDir
+}
+
 dependencies {
     compile "org.apache.httpcomponents:httpmime:4.5.2"
 }
