--- a/examples/file-importers/build.gradle
+++ b/examples/file-importers/build.gradle
@@ -1,5 +1,5 @@
-plugins {
-    id "com.jfrog.bintray" version "1.6"
+test {
+    systemProperty "job.home", examplesDir
 }
 
 ext {
@@ -7,26 +7,7 @@ ext {
 }
 
 dependencies {
-
     // For importing images
     compile "org.apache.tika:tika-parsers:1.13"
 
-}
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = [bintrayPublicationName]
-    pkg {
-        repo = bintrayRepo
-        name = artifactId
-        userOrg = bintrayUserOrg
-        licenses = [bintrayLicense]
-        vcsUrl = bintrayVcsUrl
-        version {
-            name = project.version
-            released = new Date()
-            vcsTag = project.version
-        }
-    }
 }
