--- a/examples/importDocuments/build.gradle
+++ b/examples/importDocuments/build.gradle
@@ -1,30 +1,12 @@
-plugins {
-    id "com.jfrog.bintray" version "1.6"
-}
-
 ext {
     artifactId = "import-documents"
+}
+
+test {
+    systemProperty "job.home", examplesDir
 }
 
 dependencies {
     //for filtering out directories
     compile "commons-io:commons-io:2.5"
-}
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = [bintrayPublicationName]
-    pkg {
-        repo = bintrayRepo
-        name = artifactId
-        userOrg = bintrayUserOrg
-        licenses = [bintrayLicense]
-        vcsUrl = bintrayVcsUrl
-        version {
-            name = project.version
-            released = new Date()
-            vcsTag = project.version
-        }
-    }
 }
