--- a/examples/importTriples/build.gradle
+++ b/examples/importTriples/build.gradle
@@ -1,5 +1,5 @@
-plugins {
-    id "com.jfrog.bintray" version "1.6"
+test {
+    systemProperty "job.home", examplesDir
 }
 
 ext {
@@ -27,23 +27,5 @@ dependencies {
         exclude(group: 'org.slf4j')
         exclude(group: 'log4j')
         exclude(group: 'ch.qos.logback')
-    }
-}
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
-    publications = [bintrayPublicationName]
-    pkg {
-        repo = bintrayRepo
-        name = artifactId
-        userOrg = bintrayUserOrg
-        licenses = [bintrayLicense]
-        vcsUrl = bintrayVcsUrl
-        version {
-            name = project.version
-            released = new Date()
-            vcsTag = project.version
-        }
     }
 }
