Migrate examples to run from examples/job.properties

--- a/examples/base/build.gradle
+++ b/examples/base/build.gradle
@@ -8,6 +8,10 @@ plugins {
     id "application"
 }
 
+test {
+    systemProperty "job.home", examplesDir
+}
+
 repositories {
     jcenter()
     mavenLocal()
