Fixing importBinaries and rdbms_2 examples

--- a/examples/importBinaries/build.gradle
+++ b/examples/importBinaries/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id "application"
 }
 
+test {
+    systemProperty "job.home", examplesDir
+}
+
 repositories {
     jcenter()
     maven {
