--- a/examples/job.properties
+++ b/examples/job.properties
@@ -1,4 +1,5 @@
 mlAppName=marklogic-spring-batch-test
+mlJobRepositoryName=marklogic-spring-batch-test
 marklogic.host=oscar
 marklogic.port=8200
 marklogic.username=admin
