Fix entity enrichment tests

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -1,6 +1,8 @@
 include "base"
 include "dmsdk"
-include "rdbms_1"
-include "rdbms_2"
+include "entityEnrichment"
 include "importBinaries"
 include "importDocuments"
+include "rdbms_1"
+include "rdbms_2"
+
