--- a/examples/entityEnrichment/build.gradle
+++ b/examples/entityEnrichment/build.gradle
@@ -9,9 +9,12 @@ repositories {
     mavenLocal()
 }
 
+test {
+    systemProperty "job.home", examplesDir
+}
+
 dependencies {
     compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
-    compile "com.marklogic:ml-javaclient-util:2.9.1"
     compile "org.apache.opennlp:opennlp-tools:1.6.0"
 
     testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
