Add importGeonames to examples project

--- a/examples/importGeonames/build.gradle
+++ b/examples/importGeonames/build.gradle
@@ -1,7 +1,29 @@
+plugins {
+    id "java"
+    id "application"
+}
+
+repositories {
+    jcenter()
+    mavenLocal()
+}
+
 test {
     systemProperty "job.home", examplesDir
 }
 
+distributions {
+    main {
+        baseName = 'entityEnrichment'
+    }
+}
+
+dependencies {
+    compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
+    testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
+}
+
+mainClassName = "com.marklogic.spring.batch.Main"
 
 /*
 gradle -PmlHost=localhost -PmlPort=8888 -PmlUsename=username -PmlPassword=password importGeonames
