--- a/examples/file-importers/build.gradle
+++ b/examples/file-importers/build.gradle
@@ -1,13 +1,33 @@
+plugins {
+    id "java"
+    id "application"
+}
+
+repositories {
+    jcenter()
+    mavenLocal()
+}
+
 test {
     systemProperty "job.home", examplesDir
 }
 
-ext {
-    artifactId = "marklogic-spring-batch-file-importers"
+dependencies {
+    compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
+    compile "org.apache.opennlp:opennlp-tools:1.6.0"
+
+    testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
+
 }
 
-dependencies {
-    // For importing images
-    compile "org.apache.tika:tika-parsers:1.13"
+distributions {
+    main {
+        baseName = 'entityEnrichment'
+    }
+}
 
+mainClassName = "com.marklogic.spring.batch.Main"
+
+ext {
+    artifactId = "marklogic-spring-batch-file-importers"
 }
