--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -5,6 +5,7 @@ include "file-importers"
 include "importBinaries"
 include "importDocuments"
 include "importGeonames"
+include "importTriples"
 include "rdbms_1"
 include "rdbms_2"
 
