--- a/examples/sql/build.gradle
+++ b/examples/sql/build.gradle
@@ -1,3 +1,13 @@
+plugins {
+    id "java"
+    id "application"
+}
+
+repositories {
+    jcenter()
+    mavenLocal()
+}
+
 ext {
     artifactId = "marklogic-spring-batch-sql"
 }
@@ -8,6 +18,8 @@ test {
 
 dependencies {
     compile "org.json:json:20160212"
+    compile "com.marklogic:marklogic-spring-batch-core:0.7.1"
+    testCompile "com.marklogic:marklogic-spring-batch-test:0.7.1"
 
     // For testing SQL readers with an embedded database
     testCompile "org.hsqldb:hsqldb:2.3.3"
