--- a/build.gradle
+++ b/build.gradle
@@ -107,4 +107,4 @@ task testExamples(type: GradleBuild) {
     tasks = [ 'test' ]
 }
 
-task testAll(dependsOn:[':core:test', 'examples:test', 'testExamples'] )
+task testAll(dependsOn:[':core:test', 'testExamples'] )
