--- a/examples/rdbms_1/gradle/wrapper/gradle-wrapper.properties
+++ b/examples/rdbms_1/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jul 15 15:58:03 EDT 2016
+#Tue Oct 04 14:56:11 EDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.13-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.1-bin.zip
