Add initial commit for rowToDoc utility

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -8,6 +8,7 @@ include "importGeonames"
 include "importTriples"
 include "rdbms_1"
 include "rdbms_2"
+include "rowToDoc"
 include "shapefiles"
 include "sql"
 
