--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,22 @@
 group=com.marklogic
-version=0.7.4
+version=0.8.0
 
 # Subprojects must override this so that publishing works properly
 # This is used instead of project.name, which cannot be overridden
 artifactId=
+
+# Configuration for the test app
+# Both core and jobs tests are run against this application
+mlHost=localhost
+mlAppName=marklogic-spring-batch-test
+mlJobRepositoryName=marklogic-spring-batch-test
+mlRestPort=8200
+mlUsername=admin
+mlPassword=admin
+mlManageUsername=admin
+mlManagePassword=admin
+mlConfigDir=src/test/ml-config
+mlContentForestsPerHost=1
 
 bintrayRepo=maven
 bintrayUserOrg=sastafford
